--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "serve": "vite --host",
     "sass": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
